# maze_generator

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: main.yml
examples/: mazes.rs
src/: ellers_algorithm.rs  growing_tree.rs  lib.rs  prelude.rs  prims_algorithm.rs  recursive_backtracking.rs  test_util.rs  util.rs
src/prelude/: coordinates.rs  direction.rs  field.rs  maze.rs  mod.rs  svgoptions.rs
src/recursive_backtracking/: field.rs  generator.rs  grid.rs  mod.rs
