[package]
name = "maze_generator"
version = "0.1.1-alpha.0"
authors = ["Finn-Thorben Sell <dev@finn-thorben.me>"]
edition = "2018"
description = "A library of different maze generation algorithms."
documentation = "https://docs.rs/maze_generator/"
readme = "README.md"
repository = "https://github.com/ftsell/maze_generator.git"
license = "MIT"
keywords = ["maze", "generator"]
categories = ["algorithms", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
rand = "0.7.3"
rand_chacha = "0.2.2"
