[package]
name = "maze_generator"
version = "2.0.1-next"
authors = ["Finn-Thorben Sell <dev@finn-thorben.me>"]
edition = "2018"
description = "A library of different maze generation algorithms."
documentation = "https://docs.rs/maze_generator/"
readme = "README.md"
repository = "https://github.com/ftsell/maze_generator.git"
license = "MIT"
keywords = ["maze", "generator"]
categories = ["algorithms", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
rand_chacha = "0.3.0"
petgraph = "0.6.0"
thiserror = "1.0.30"
anyhow = "1.0.56"

[dev-dependencies]
quickcheck = "0.9.1"
clap = { version = "3.1.5", features = ["derive"] }
